fix widths of elements on small devices; Fix z index for mobile header

--- a/styles/main.css
+++ b/styles/main.css
@@ -55,18 +55,20 @@ h3 {
         margin: auto;
         margin-top: -155px;
         margin-bottom: 100px;
-        margin-left: -29px;
-        margin-right: -29px;
+        margin-left: -17px;
+        margin-right: -17px;
         background-color: rgb(80, 80, 80);
         position: -webkit-sticky;
         position: sticky;
-        padding-top: 10px;
+        padding-top: 5px;
+        padding-bottom: 5px;
         top: 0;
-        z-index: 0;
+        z-index: 1;
         text-align: center;
     }
     #sidebar {
         min-width: 250px;
+        z-index: 2;
     }
 }
 
